k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsa-signature-demo
  labels:
    name: rsa-signature-demo
    app: rsa-signature-demo
