k8s/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsa-signature-demo-service
  namespace: rsa-signature-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: rsa-signature-demo
